WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282332
[IFC][shape-outside] RTL content fails with shape-outside float
https://bugs.webkit.org/show_bug.cgi?id=282332
Summary
[IFC][shape-outside] RTL content fails with shape-outside float
alan
Reported
2024-10-30 09:11:46 PDT
Created
attachment 473081
[details]
Test reduction see attached test case.
Attachments
Test reduction
(316 bytes, text/html)
2024-10-30 09:11 PDT
,
alan
no flags
Details
Patch
(12.58 KB, patch)
2024-11-02 10:31 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.65 KB, patch)
2024-11-02 11:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(14.71 KB, patch)
2024-11-04 05:10 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-11-02 10:31:37 PDT
Created
attachment 473111
[details]
Patch
alan
Comment 2
2024-11-02 11:03:13 PDT
Created
attachment 473112
[details]
Patch
alan
Comment 3
2024-11-04 05:10:45 PST
Created
attachment 473124
[details]
[fast-cq]Patch
EWS
Comment 4
2024-11-04 06:23:17 PST
Committed
286079@main
(5a8e75cf4efa): <
https://commits.webkit.org/286079@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473124
[details]
.
Radar WebKit Bug Importer
Comment 5
2024-11-04 06:24:14 PST
<
rdar://problem/139198865
>
Tim Nguyen (:ntim)
Comment 6
2025-01-02 15:39:45 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/49887
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug