[IFC][shape-outside] RTL content fails with shape-outside float https://bugs.webkit.org/show_bug.cgi?id=282332

Reviewed by Antti Koivisto.

RectangleLayoutShape::getExcludedInterval is supposed to return logical values.

Using the box logical box size (which may be very different from shape bounds) and the writing mode we can now translate top/left line segment to logical.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/supported-shapes/circle/shape-outside-circle-049.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/supported-shapes/circle/shape-outside-circle-051.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/supported-shapes/circle/shape-outside-circle-055.html:
* Source/WebCore/rendering/shapes/LayoutShape.cpp:
(WebCore::createCircleShape):
(WebCore::createEllipseShape):
(WebCore::LayoutShape::createShape):
* Source/WebCore/rendering/shapes/LayoutShape.h:
(WebCore::LayoutShape::writingMode const):
* Source/WebCore/rendering/shapes/RectangleLayoutShape.cpp:
(WebCore::RectangleLayoutShape::getExcludedInterval const):
* Source/WebCore/rendering/shapes/RectangleLayoutShape.h:

Canonical link: https://commits.webkit.org/286079@main